--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.3",
+    "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.1",
+    "lodash": "^4.17.21",
     "next": "14.2.1",
     "next-i18next": "^15.3.0",
-    "next-intl": "^3.11.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^14.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
